# Thousand-Days-and-a-Day

./: CMakeLists.txt  README.md
include/: EventManager.h  LogicDelegate.h  LoopController.h  RenderManager.h  UIManager.h  WindowManager.h  cleanup.h
src/: EventManager.cpp  LogicDelegate.cpp  LoopController.cpp  RenderManager.cpp  UIManager.cpp  WindowManager.cpp  main.cpp
